@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-09-25 Wed 15:42 -->
+<!-- 2024-09-26 Thu 12:35 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-09-25 15:42:03</i></td>
+<td class="org-left"><i>2024-09-26 12:35:54</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-09-25 15:42:14</i></td>
+<td class="org-left"><i>2024-09-26 12:35:58</i></td>
 </tr>
 </tbody>
 </table>
@@ -309,6 +309,7 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 <ul class="org-ul">
 <li>phoenix: Classic phoenix fractal</li>
 <li>phoenixM: A movie of the classic phoenix fractal</li>
+<li>phoenixM2: Another movie of the classic phoenix fractal</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
