@@ -1,13 +1,14 @@
 // -*- Mode:C++; Coding:us-ascii-unix; fill-column:158 -*-
 /*******************************************************************************************************************************************************.H.S.**/
 /**
- @file      phoenix.cpp
+ @file      phoenixM2.cpp
  @author    Mitch Richling <https://www.mitchr.me>
- @brief     Draw Phoenix Julia set fractals.@EOL
+ @brief     Create a phoenix Julia set movie.@EOL
  @std       C++20
+ @see       
  @copyright
   @parblock
-  Copyright (c) 2024, Mitchell Jay Richling <https://www.mitchr.me> All rights reserved.
+  Copyright (c) 1988-2015, Mitchell Jay Richling <https://www.mitchr.me> All rights reserved.
 
   Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
 
@@ -37,31 +38,28 @@
 typedef mjr::ramCanvas3c8b::colorType ct;
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------------
-std::vector<std::array<double, 9>> params {
-  /*       cr,       ci,       pr,       pi,    k, x-min, x-max, y-min, y-max */
-  {  0.566700,  0.00000, -0.50000,  0.00000, 10.0, -1.35,  1.35, -1.35,  1.35}, //  0 
-  {  0.544992,  0.00000, -0.47000,  0.00000, 10.0, -1.35,  1.35, -1.35,  1.35}, //  1
-  {  0.269000,  0.00000,  0.00000,  0.01000,  5.0, -1.10,  1.10, -1.00,  1.00}, //  2
-  { -0.400000,  0.10000,  0.29550,  0.00000, 10.0, -1.10,  1.10, -1.50,  1.50}, //  3
-  {  0.400000,  0.00000, -0.25000,  0.00000, 10.0, -1.30,  1.20, -1.00,  1.00}, //  4
-  {  0.100000,  0.60000, -0.35000,  0.00000, 10.0, -1.30,  1.30, -1.30,  1.30}, //  5
-  {  0.400000,  0.40000,  0.20500,  0.00000, 30.0, -1.30,  1.30, -1.30,  1.30}, //  6
-  {  0.400000,  0.50000,  0.20500,  0.00000, 30.0, -1.30,  1.30, -1.30,  1.30}, //  7
-};
-
-//--------------------------------------------------------------------------------------------------------------------------------------------------------------
 int main(void) {
   std::chrono::time_point<std::chrono::system_clock> startTime = std::chrono::system_clock::now();
-  const int    WIDTH  = 1920*4;
-  const int    HEIGHT = 1920*4;
-  const int    NUMITR = 500;
+  const int    WIDTH  = 1920/2;
+  const int    HEIGHT = 1920/2;
+  const int    NUMITR = 40;
   const double MAXZ   = 4.0;
 
+  const int    NUMFRM = 24*2;
+  const double ANGMIN = 0.0;
+  const double ANGMAX = std::numbers::pi*2;
+  const double RADIUS = 0.06;
+
 # pragma omp parallel for schedule(static,1)
-  for(decltype(params.size()) j=0; j<params.size(); ++j) {
-    const std::complex<double> c(params[j][0], params[j][1]);
-    const std::complex<double> p(params[j][2], params[j][3]);
-    mjr::ramCanvas3c8b theRamCanvas(WIDTH, HEIGHT, params[j][5], params[j][6], params[j][7], params[j][8]);
+  for(int frame=0; frame<NUMFRM; frame++) {
+#   pragma omp critical
+    std::cout << "Frame: " << frame << std::endl;
+    double angle = frame*(ANGMAX-ANGMIN)/NUMFRM+ANGMIN;
+
+    const std::complex<double> c(-0.400000+RADIUS*std::cos(angle),  0.10000+RADIUS*std::sin(angle));
+    const std::complex<double> p(0.29550+RADIUS*std::cos(angle),  0.00000+RADIUS*std::sin(angle));
+    mjr::ramCanvas3c8b theRamCanvas(WIDTH, HEIGHT, -1.10,  1.10, -1.50,  1.50);
+
     for(int y=0;y<theRamCanvas.getNumPixY();y++) {
       for(int x=0;x<theRamCanvas.getNumPixX();x++) {
         std::complex<double> z1(theRamCanvas.int2realY(y), theRamCanvas.int2realX(x));
@@ -73,12 +71,13 @@ int main(void) {
           z1 = z;
           count++;
         }
-        if(count < NUMITR)
-          theRamCanvas.drawPoint(x, y, ct::csCCfractal0RYBCW::c(static_cast<ct::csIntType>(count*params[j][4])));
+        if ((count < NUMITR) && (count > 5))
+          theRamCanvas.drawPoint(x, y, ct::csCCfractal0RYBCW::c(static_cast<ct::csIntType>(std::log(count)*110)));
       }
     }
-    theRamCanvas.writeTIFFfile("phoenix_" + mjr::fmtInt(j, 2, '0') + ".tiff");
-    std::cout << "ITER(" << j <<  "): " << "DONE" << std::endl;
+    theRamCanvas.writeTIFFfile("phoenixM2_" + mjr::fmtInt(frame, 2, '0') + ".tiff");
+#   pragma omp critical
+    std::cout << "FRAME(" << frame <<  "): " << "DONE" << std::endl;
   }
 
   std::chrono::duration<double> runTime = std::chrono::system_clock::now() - startTime;
